Cleanieng! New concept for routers
